# LifeLogger

./: .pre-commit-config.yaml  README.md  langgraph.json  main.py  pyproject.toml
ragtest/: settings.yaml
ragtest/input/: book.txt
ragtest/logs/: logs.txt
ragtest/prompts/: community_report_graph.txt
src/agent/: logger.py  photo_analyzer.py
src/models/: chat_model.py  vision_model.py
src/prompts/: template.py
src/prompts/templates/: logger.jinja-md  vision_analyzer.jinja-md
